[project]
name = "langdon"
version = "0.1.0a"
description = "Tool for target applications reconnaissance"
authors = [
    {name = "Lucas Calegario"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests[socks] (>=2.32.3,<2.33.0)",
    "beautifulsoup4 (>=4.13.3,<4.14.0)",
    "sqlalchemy (>=2.0.39,<2.1.0)",
    "pandas (>=2.2.3,<2.3.0)",
    "selenium (>=4.30.0,<4.31.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "speechrecognition (>=3.14.2,<3.15.0)",
    "pydantic (>=2.10.6,<2.11.0)",
    "tomli-w (>=1.2.0,<1.3.0)",
    "wafw00f (>=2.3.1,<2.4.0)",
    "dnsgen (>=1.0.4,<1.1.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "langdon-core @ git+https://github.com/xlurio/langdon-core.git",
]

[project.scripts]
langdon="langdon.cli:run"

[tool.poetry]
packages = [{include = "langdon", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ANN001", "F401", "G004", "I", "PLR0912", "PLR0917", "SIM117", "TC"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pylint]
max-branches = 3

[tool.pylint]

ignore = ["venv"]

disable = "all"
enable = "E1120"
